--- a/mobile/m_index.css
+++ b/mobile/m_index.css
@@ -84,9 +84,14 @@ img, .container {
     height: 205px;
 }
 
+.gallery-banner-container {
+    display: block;
+    height: 205px;
+}
+
 .banner-container {
     display: flex;
-    background: url("/assets/banner.png");
+    background: url("/assets/banner.jpg");
     background-size: cover;
     height: 100%;
     border: 1px solid #000000;
@@ -100,8 +105,29 @@ img, .container {
     color: #FFFFFF;
     background-color: rgba(77, 218, 168, 0.6);
     margin: 70px;
-    border-radius: 5px;
+    border-radius: 60px;
     text-transform: uppercase;
+}
+
+.gallery-banner {
+    display: flex;
+    background: url("/assets/gallery-banner.png");
+    background-size: cover;
+    height: 100%;
+    border: 1px solid #000000;
+    background-color: rgba(0, 0, 0, 0.5); 
+    background-blend-mode: multiply; 
+}
+
+.gallery-banner > h1 {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    margin: 10px;
+    border-radius: 60px;
+    font-size: 18px;
 }
 
 .search-bar-container {
@@ -373,8 +399,79 @@ img, .container {
 
 .search-input[type="text"]:focus {
     outline: none;
-  }
+}
 
 .nav-list > li.active {
     color: green;
+}
+
+.gallery-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.gallery-span-full {
+    background-color: #E1F4D5;
+    padding: 10px;
+    text-align: justify;
+    line-height: 20px;
+}
+
+.gallery-image-container {
+    position: relative; /* Enable positioning for overlays */
+    height: 300px; /* Adjust as needed */
+}
+  
+.gallery-image {
+    max-width: 100%;
+    height: auto;
+}
+  
+.hidden {
+  display: none; /* Hide the image completely */
+}
+
+.image-lists {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.image-lists > img {
+  width: calc(100% / 2 - 5px);
+}  
+
+.gallery-popup-container {
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Transparent black overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it's on top */
+}
+
+.gallery-popup-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    color: white;
+}
+
+.gallery-popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.gallery-popup-content img {
+    max-width: 100%;
+    height: auto;
 }
