--- a/mobile/m_index.css
+++ b/mobile/m_index.css
@@ -492,6 +492,9 @@ img, .container {
 .p_conct {
     background-color: #D4F5ED;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .contact-us-container p {
     font-family: Inria Sans;
@@ -501,6 +504,7 @@ img, .container {
     height: fit-content;
     text-align: center;
     margin: 20px;
+    line-height: 1.3;
 }
 .information {
     flex-direction: column;
